--- a/style.css
+++ b/style.css
@@ -1,52 +1,52 @@
 *{
-	padding: 0;
-	margin: 0;
+    padding: 0;
+    margin: 0;
 }
 .portfolio-sections{
-	height: 360px;
-	width: 100%;
-	border: 2px solid black;
-	text-align: center;
-	background-color: white;
+    height: 360px;
+    width: 100%;
+    border: 2px solid black;
+    text-align: center;
+    background-color: white;
 }
 .navigation-bar{
-	position: fixed;
-	width: 100%;
-	background-color: transparent;
-	backdrop-filter: blur(10px);
-	z-index: 1;
+    position: fixed;
+    width: 100%;
+    background-color: transparent;
+    backdrop-filter: blur(10px);
+    z-index: 1;
 }
 .portfolio-sections h1{
-	margin-top: 60px;
+    margin-top: 60px;
 }
 html{
-	scroll-behavior: smooth;
+    scroll-behavior: smooth;
 }
 .main-container{
-	position: relative;
-	top: 75px;
+    position: relative;
+    top: 75px;
 }
 .brand{
-	font-size: 30px;
-	font-family: Times New Roman;
-	font-weight: bolder;
-	font-variant: small-caps;
-	color: brown;
+    font-size: 30px;
+    font-family: Times New Roman;
+    font-weight: bolder;
+    font-variant: small-caps;
+    color: brown;
 }
 .navmenu{
-	color: black;
-	font-size: 20px;
-	font-family: Times New Roman;
-	font-weight: bolder;
-	padding-left: 15px;
+    color: black;
+    font-size: 20px;
+    font-family: Times New Roman;
+    font-weight: bolder;
+    padding-left: 15px;
 }
 .navmenu:hover{
-	text-decoration: underline 2px solid black;
-	text-underline-offset: 6px;
+    text-decoration: underline 2px solid black;
+    text-underline-offset: 6px;
 }
 .tracking-in-expand {
-	-webkit-animation: tracking-in-expand 2s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
-	        animation: tracking-in-expand 2s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+    -webkit-animation: tracking-in-expand 2s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+            animation: tracking-in-expand 2s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
 }
 
 @-webkit-keyframes tracking-in-expand {
@@ -74,115 +74,230 @@ html{
   }
 }
 #home{
-	height: 370px;
-	background-image: url(https://media4.giphy.com/media/L8K62iTDkzGX6/giphy.gif);
-	background-repeat: no-repeat;
-	background-size: 24%;
-	background-position: 90% 60%;
-	border: none;
+    height: 370px;
+    background-image: url(https://media4.giphy.com/media/L8K62iTDkzGX6/giphy.gif);
+    background-repeat: no-repeat;
+    background-size: 24%;
+    background-position: 90% 60%;
+    border: none;
+    background-color: lightgoldenrodyellow;
 }
 
 #home-info{
-	position: absolute;
-	top: 20px;
-	width: 400px;
-	height: 250px;
-	font-size: 25px;
-	margin-top: 50px;
-	margin-left: 70px;
-	text-align: left;
+    position: absolute;
+    top: 20px;
+    width: 400px;
+    height: 250px;
+    font-size: 25px;
+    margin-top: 50px;
+    margin-left: 70px;
+    text-align: left;
 
 }
 
 .info{
-	font-weight: bolder;
-	color: black;
-	font-family: Times New Roman;
+    font-weight: bolder;
+    color: black;
+    font-family: Times New Roman;
 }
 .designation{
-	color: black;
-	font-size: 30px;
-	font-weight: bolder;
+    color: black;
+    font-size: 30px;
+    font-weight: bolder;
 }
 .myname{
-	font-size: 35px;
+    font-size: 35px;
 }
 
 .rsmbtn{
-	height: 40px;
-	width: 100px;
-	border: none;
-	margin-top: 20px;
-	border-radius: 10px;
-	font-size: 15px;
-	font-weight: bolder;
-	background-color: royalblue;
-	color: white;
-	transition-duration: 1s;
+    height: 40px;
+    width: 100px;
+    border: none;
+    margin-top: 20px;
+    border-radius: 10px;
+    font-size: 15px;
+    font-weight: bolder;
+    background-color: royalblue;
+    color: white;
+    transition-duration: 1s;
 }
 
 .rsmbtn:hover{
-	background-color: white;
-	color: royalblue;
-	border: 3px solid royalblue;
-	transform: scale(1.1);
+    background-color: white;
+    color: royalblue;
+    border: 3px solid royalblue;
+    transform: scale(1.1);
 }
 
 .about-section{
-	height: 500px;
-	width: 100%;
-	background-color: whitesmoke;
+    border: none;
+    height: 500px;
+    width: 100%;
+    background-color: lightcyan;
 }
 
 .aboutmain{
-	height: 500px;
-	width: 100%;
-	display: flex;
-	font-size: 25px;
-	font-family: Times New Roman;
-	font-weight: bolder;
+    height: 500px;
+    width: 100%;
+    display: flex;
+    font-size: 25px;
+    font-family: Times New Roman;
+    font-weight: bolder;
 }
 
 .aboutmain div{
-	height: 500px;
-	width: 50%;
+    height: 500px;
+    width: 50%;
 }
 
 .minion{
-	margin-top: 100px;
-	margin-left: 60px;
-	margin-right: 90px;
-	animation-duration: 4s;
-	animation-name: zoom;
-	animation-iteration-count: 1;
+    margin-top: 100px;
+    margin-left: 60px;
+    margin-right: 90px;
+    animation-duration: 4s;
+    animation-name: zoom;
+    animation-iteration-count: 1;
 }
 
 @keyframes zoom{
-	100%{
-		transform: scale(1.2);
-		border-radius: 60px;
-	}
+    100%{
+        transform: scale(1.2);
+        border-radius: 60px;
+    }
 }
 
 .heading{
-	font-family: Times New Roman;
-	text-align: center;
-	margin: 30px 0px;
-	font-size: 40px;
-	color: blue;
-	font-weight: bolder;
+    font-family: Times New Roman;
+    text-align: center;
+    margin: 30px 0px;
+    font-size: 40px;
+    color: blue;
+    font-weight: bolder;
 }
 
 .carrerobj{
-	padding: 30px;
+    padding: 30px;
 }
 
 .carrerinfo{
-	text-align: justify;
-	line-height: 40px;
-	text-indent: 100px;
-	word-spacing: 7px;
-	letter-spacing: 1px;
+    text-align: justify;
+    line-height: 40px;
+    text-indent: 100px;
+    word-spacing: 7px;
+    margin-right: 40px;
+    letter-spacing: 1px;
+    border: none;
 }
 
+.skill-section {
 
+    border: none;
+    height: 700px;
+    width: 100%;
+    background-color: lightblue; 
+}
+.tbl{
+    margin-left: 5%;
+    margin-top: 20px;
+    margin-inline: 15%;
+}
+.tbl tr td{
+    padding: 40px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 5px royalblue;
+    transition-duration: 1.5s;
+}
+.skills-subheading{
+    color: brown;
+    font-family: Times New Roman;
+    font-weight: bolder;
+    font-size: 25px;
+    font-variant: small-caps;
+
+}
+.detailedSkills{
+    font-size: 23px;
+    font-weight: bolder;
+    font-color: black;
+    line-height:40px;
+    word-spacing: 3px;
+    margin-top:20px;
+}
+
+#projects{
+    height: 800px;
+    width: 100%;
+    padding: 10px;
+    border: none;
+    background-color: lightsteelblue;
+}
+
+.heading{
+    margin-top: 20px;
+    font-size: 35;
+}
+
+.project-card-container{
+    padding: 20px;
+    margin-top: -20px;
+}
+
+.card-title{
+    color: blueviolet;
+    text-align: center;
+    font-family: Times New Roman;
+    font-weight: bolder;
+}
+
+#contact{
+    height: 560px;
+    width: 100%;
+    text-align: left;
+    background-color: aliceblue;
+    padding: 20px;
+    border: none;
+}
+
+.main-container2{
+    height: 400px;
+    width: 80%;
+    display: flex;
+    margin-left: 10%;
+
+}
+
+.contact-child{
+    height: 400px;
+    width: 50%;
+}
+
+.contact-info{
+    font-size: 18px;
+    font-family: Times New Roman;
+    font-weight: bolder;
+    margin-top: 70px;
+}
+
+.contact-info li{
+    margin-top: 20px;
+}
+
+.contact-form{
+    padding: 15px;
+    padding-left: 70px;
+    margin-top: 50px;
+}
+
+#footer{
+    
+    height: 50px;
+    width: 100%;
+    background-color: royalblue;
+    text-align: center;
+}
+
+#footerinfo{
+    font-size: 20px;
+    line-height: 50px;
+    color: white;
+}
